Fix unreadable text with shadow
See issue #55

--- a/content/skin/root.css
+++ b/content/skin/root.css
@@ -13,7 +13,7 @@
          url('fonts/encode-sans-semi-condensed-v5-latin-ext_latin-300.svg#EncodeSansSemiCondensed') format('svg'); /* Legacy iOS */
   }
   
-  /* encode-sans-semi-condensed-regular - latin-ext_latin */
+/* encode-sans-semi-condensed-regular - latin-ext_latin */
 @font-face {
     font-family: 'EncodeSansSemiCondensed';
     font-style: normal;
@@ -24,7 +24,6 @@
          url('fonts/encode-sans-semi-condensed-v5-latin-ext_latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
          url('fonts/encode-sans-semi-condensed-v5-latin-ext_latin-regular.svg#EncodeSansSemiCondensed') format('svg'); /* Legacy iOS */
 }
-  
 
 :root {
     --scrollbar-thumb-hover-color: red;
@@ -70,6 +69,11 @@
 
 * {
     font-family: var(--default-font);
+    text-shadow: none !important; 
+}
+
+:root[lwtheme-image]:-moz-lwtheme-brighttext { 
+    text-shadow: none !important;
 }
 
 #mail-toolbar-menubar2,
